Almost everything working now, only some minor fixes left
